--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: beige;
 }
 h1 {
-    font-family:Arial, Helvetica, sans-serif;
+    text-align: center;
     color: blue;
 }
 p {
