--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    background-color: beige;
+    background-color: whitesmoke;
 }
 h1 {
     text-align: center;
-    color: blue;
+    color: black;
 }
 p {
     font-family: Arial, Helvetica, sans-serif;
