--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ body {
 }
 h1 {
     text-align: center;
+    font-family: Helvetica;
     color: black;
 }
 p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica;
     color: red;
 }
