--- a/style.css
+++ b/style.css
@@ -2,20 +2,8 @@
 .header {
   padding: 60px;
   text-align: center;
-  background: #1abc9c;
+  background: #0099b4;
   color: white;
-  font-size: 30px;
+  font-size: 40px;
 }
 
-body {
-    background-color: whitesmoke;
-}
-h1 {
-    text-align: center;
-    font-family: Helvetica;
-    color: black;
-}
-p {
-    font-family: Helvetica;
-    color: red;
-}
