--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 /* Header/Logo Title */
 .header {
-  padding: 60px;
+  padding: 20px;
   text-align: center;
   background: #0099b4;
   color: white;
-  font-size: 40px;
+  font-size: 50px;
 }
 
+.left_image {
+    padding: 20px;
+    text-align: left;
+}
