--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@
 }
 
 .left_image {
-    padding: 20px;
+    padding: 10px;
     text-align: left;
+}
+
+.body {
+  padding: 20px;
+  text-align: right;
+  color: black
 }
