--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 10px;
   text-align: center;
   background: #0099b4;
+  width: 100%;
   background-image:url("slmath.jpeg");
   color: white;
   font-size: 35px;
