--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   text-align: center;
   background: #0099b4;
   width: 100%;
-  background-image:url("slmath.jpeg");
+  background-image:url("slmath.png");
   background-size: cover;
   color: white;
   font-size: 35px;
