--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   width: 100%;
   background-image:url("slmath.png");
   background-size: cover;
+  opacity: 90%;
   color: white;
   font-size: 35px;
 }
