--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   background-image:url("slmath.png");
   background-size: cover;
   opacity: 90%;
-  color: white;
+  color: rgb(193, 238, 251);
   font-size: 35px;
 }
 
