--- a/style.css
+++ b/style.css
@@ -20,3 +20,8 @@ aside {
     float: left;
     margin-right: 10px;
 }
+
+a:visited { text-decoration: none; color:red; }
+a:hover { text-decoration: none; color:blue; }
+a:focus { text-decoration: none; color:yellow; }
+a:hover, a:active { text-decoration: none; color:black }
