--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ aside {
     margin-right: 10px;
 }
 
-a:visited { text-decoration: none; color:red; }
+a:visited { text-decoration: none; color:rgb(193, 238, 251); }
 a:hover { text-decoration: none; color:blue; }
-a:focus { text-decoration: none; color:yellow; }
-a:hover, a:active { text-decoration: none; color:black }
+a:focus { text-decoration: none; color:rgb(193, 238, 251); }
+a:hover, a:active { text-decoration: none; color:rgb(193, 238, 251) }
