--- a/style.css
+++ b/style.css
@@ -11,17 +11,16 @@
   font-size: 35px;
   font-family: Garamond;
 
-  a:hover { text-decoration: none; color:rgb(176, 234, 250); };
-  a:focus { text-decoration: none; color:rgb(176, 234, 250); };
-  a:hover, a:active { text-decoration: none; color:rgb(176, 234, 250) } ;
-  a:visited { text-decoration: none; color:rgb(176, 234, 250); };
-  a[href^="mailto:"] { text-decoration: none; color:rgb(236, 251, 255)}
+  a:hover { text-decoration: none; color:black; };
+  a:focus { text-decoration: none; color:black; };
+  a:hover, a:active { text-decoration: none; color:black } ;
+  a:visited { text-decoration: none; color:black; };
+  a[href^="mailto:"] { text-decoration: none; color:black}
 
   nav.transbox {
   margin: 30px;
   background-color: #ffffff;
-  border: 1px solid black;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 }
 
