--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   a:focus { text-decoration: none; color:black; };
   a:hover, a:active { text-decoration: none; color:black } ;
   a:visited { text-decoration: none; color:black; };
-  a[href^="mailto:"] { text-decoration: none; color:black}
+  a[href^="mailto:"] { text-decoration: none; color:rgb(236, 251, 255)}
 
   nav.transbox {
   margin: 30px;
