--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@
   margin: 30px;
   background-color: #ffffff;
   opacity: 0.7;
+  a:hover { text-decoration: none; color:rgb(59, 59, 59); };
+  a:focus { text-decoration: none; color:rgb(59, 59, 59); };
+  a:hover, a:active { text-decoration: none; color:rgb(139, 139, 139) } ;
+  a:visited { text-decoration: none; color:rgb(59, 59, 59); };
 }
 }
 
