--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
   a:hover, a:active { text-decoration: none; color:black } ;
   a:visited { text-decoration: none; color:black; };
   a[href^="mailto:"] { text-decoration: none; color:rgb(236, 251, 255)}
+  a:visited[href^="mailto:"] { text-decoration: none; color:rgb(236, 251, 255)}
 
   nav.transbox {
   margin: 30px;
