--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
   a:focus { text-decoration: none; color:rgb(59, 59, 59); };
   a:hover, a:active { text-decoration: none; color:rgb(139, 139, 139) } ;
   a:visited { text-decoration: none; color:rgb(59, 59, 59); };
+  a:link { text-decoration: none; color:rgb(59, 59, 59); }
 }
 }
 
