--- a/style.css
+++ b/style.css
@@ -23,10 +23,12 @@
   background-color: #ffffff;
   opacity: 0.7;
   a:hover { text-decoration: none; color:rgb(59, 59, 59); };
-  a:focus { text-decoration: none; color:rgb(59, 59, 59); };
-  a:hover, a:active { text-decoration: none; color:rgb(139, 139, 139) } ;
-  a:visited { text-decoration: none; color:rgb(59, 59, 59); };
   a:link { text-decoration: none; color:rgb(59, 59, 59); }
+  a:focus { text-decoration: none; color:rgb(59, 59, 59); };
+  a:hover { text-decoration: none; color:rgb(59, 59, 59); }
+  a:active { text-decoration: none; color:rgb(139, 139, 139) } ;
+  a:visited { text-decoration: none; color:rgb(59, 59, 59); };
+  
 }
 }
 
