--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     max-width: 100%;
     overflow-x: hidden;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
